// Copyright 2022 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package cv.internal.buildbucket;

option go_package = "go.chromium.org/luci/cv/internal/buildbucket/listener;bblistener";

import "google/protobuf/duration.proto";

// ListenBBPubsubTask listens to Buildbucket Pub/Sub and schedules tasks to
// update Tryjobs that LUCI CV is interested in.
//
// Queue: "listen-bb-pubsub".
message ListenBBPubsubTask {
  // Duration defines how long the listener should listen to Pub/Sub
  // notifications.
  google.protobuf.Duration duration = 1;
}
